# facsforge

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: example_experiment.yaml  merge_all_csv.ipynb
facsforge/: cli.py
facsforge/cli/: __init__.py  analyze_facs.py  analyze_merge_facs.py  flowjo10_to_facsforge.py  flowjo9_to_facsforge.py  generate_config.py  main.py
facsforge/config/: schema.json
facsforge/core/: gating_engine.py  index.py  loader.py  merge.py  pita.py  thresholds.py  transforms.py  umap_engine.py  validate_schema.py
facsforge/utils/: __init__.py  gatingml_parser.py  logging.py
facsforge/webapp/: app.py
facsforge/webapp/templates/: gates.html  index.html  panel.html
tests/: conftest.py  test_flowjo2own_cli.py  test_index_example.py  test_loader.py  test_xanalyze.py
tests/data/: .valid_basic.yaml.swp  .~lock.two_cells.csv#  01-Jun-2021.wsp  AnalysisForE2-E3-Bioinformatics.wsp  invalid_duplicate_panel.yaml  invalid_missing_panel.yaml  invalid_parent.yaml  invalid_schema.yaml  two_cells.csv  two_cells.yaml  valid_basic.yaml
